{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 50,
  "lineage": "e3fb0f1f-f145-bd49-4ec5-b20a086f808f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mt_eip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08649791ac59935de",
            "association_id": "eipassoc-07e1a6342231dc628",
            "domain": "vpc",
            "id": "eipalloc-08649791ac59935de",
            "network_border_group": "us-east-1",
            "network_interface": "eni-009aae3a93239c2e8",
            "private_dns": "ip-10-1-1-248.ec2.internal",
            "private_ip": "10.1.1.248",
            "public_dns": "ec2-52-44-165-211.compute-1.amazonaws.com",
            "public_ip": "52.44.165.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_IG",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mt_eip-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029d9d5ccc0cc29d8",
            "association_id": "eipassoc-0ae27f8c37838596f",
            "domain": "vpc",
            "id": "eipalloc-029d9d5ccc0cc29d8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04cebfb5a2af2d9d6",
            "private_dns": "ip-10-1-3-30.ec2.internal",
            "private_ip": "10.1.3.30",
            "public_dns": "ec2-54-237-50-71.compute-1.amazonaws.com",
            "public_ip": "54.237.50.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_IG",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:internet-gateway/igw-09410a51230e2309d",
            "id": "igw-09410a51230e2309d",
            "owner_id": "636955247316",
            "tags": {
              "Name": "my_ig"
            },
            "tags_all": {
              "Name": "my_ig"
            },
            "vpc_id": "vpc-0fb00bbf56a7f1942"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_nat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08649791ac59935de",
            "association_id": "eipassoc-07e1a6342231dc628",
            "connectivity_type": "public",
            "id": "nat-035048b2405a5ed14",
            "network_interface_id": "eni-009aae3a93239c2e8",
            "private_ip": "10.1.1.248",
            "public_ip": "52.44.165.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ae7404cd6938e4e3",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.mt_eip-1",
            "aws_internet_gateway.my_IG",
            "aws_subnet.public-1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_nat-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029d9d5ccc0cc29d8",
            "association_id": "eipassoc-0ae27f8c37838596f",
            "connectivity_type": "public",
            "id": "nat-0951bbf6c02332609",
            "network_interface_id": "eni-04cebfb5a2af2d9d6",
            "private_ip": "10.1.3.30",
            "public_ip": "54.237.50.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d509629ce96d811",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.mt_eip-2",
            "aws_internet_gateway.my_IG",
            "aws_subnet.public-2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:route-table/rtb-0b58cabb57b73b555",
            "id": "rtb-0b58cabb57b73b555",
            "owner_id": "636955247316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035048b2405a5ed14",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_2"
            },
            "tags_all": {
              "Name": "private_route_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb00bbf56a7f1942"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mt_eip-1",
            "aws_internet_gateway.my_IG",
            "aws_nat_gateway.eks_nat-1",
            "aws_subnet.public-1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:route-table/rtb-0d3149217e068547e",
            "id": "rtb-0d3149217e068547e",
            "owner_id": "636955247316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0951bbf6c02332609",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_2"
            },
            "tags_all": {
              "Name": "private_route_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb00bbf56a7f1942"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mt_eip-2",
            "aws_internet_gateway.my_IG",
            "aws_nat_gateway.eks_nat-2",
            "aws_subnet.public-2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:route-table/rtb-00acab6f8df82cd3b",
            "id": "rtb-00acab6f8df82cd3b",
            "owner_id": "636955247316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09410a51230e2309d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb00bbf56a7f1942"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_IG",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f7b4d5276e3d719",
            "route_table_id": "rtb-00acab6f8df82cd3b",
            "subnet_id": "subnet-0ae7404cd6938e4e3"
          },
          "dependencies": [
            "aws_internet_gateway.my_IG",
            "aws_route_table.public_route",
            "aws_subnet.public-1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0358f0e308f24679c",
            "route_table_id": "rtb-00acab6f8df82cd3b",
            "subnet_id": "subnet-06d509629ce96d811"
          },
          "dependencies": [
            "aws_internet_gateway.my_IG",
            "aws_route_table.public_route",
            "aws_subnet.public-2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0848334c730cb2ae0",
            "route_table_id": "rtb-0b58cabb57b73b555",
            "subnet_id": "subnet-069508678bfe99dda"
          },
          "dependencies": [
            "aws_eip.mt_eip-1",
            "aws_internet_gateway.my_IG",
            "aws_nat_gateway.eks_nat-1",
            "aws_route_table.private_route_1",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1f25f26ee7dc015",
            "route_table_id": "rtb-0d3149217e068547e",
            "subnet_id": "subnet-036918a9c98c1c5f7"
          },
          "dependencies": [
            "aws_eip.mt_eip-2",
            "aws_internet_gateway.my_IG",
            "aws_nat_gateway.eks_nat-2",
            "aws_route_table.private_route_2",
            "aws_subnet.private-1",
            "aws_subnet.public-2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:subnet/subnet-036918a9c98c1c5f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036918a9c98c1c5f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636955247316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kubernetes.io/cluster/eks": "shared",
              "Name": "private-1-eat-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Kubernetes.io/cluster/eks": "shared",
              "Name": "private-1-eat-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fb00bbf56a7f1942"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:subnet/subnet-069508678bfe99dda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069508678bfe99dda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636955247316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kubernetes.io/cluster/eks": "shared",
              "Name": "private-2_east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Kubernetes.io/cluster/eks": "shared",
              "Name": "private-2_east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fb00bbf56a7f1942"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:subnet/subnet-0ae7404cd6938e4e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae7404cd6938e4e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636955247316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kubernetes.io/cluster/eks": "shared",
              "Name": "public-1_eat-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Kubernetes.io/cluster/eks": "shared",
              "Name": "public-1_eat-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fb00bbf56a7f1942"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:subnet/subnet-06d509629ce96d811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d509629ce96d811",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636955247316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kubernetes.io/cluster/eks": "shared",
              "Name": "public-2_east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Kubernetes.io/cluster/eks": "shared",
              "Name": "public-2_east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fb00bbf56a7f1942"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636955247316:vpc/vpc-0fb00bbf56a7f1942",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b11c88b2648650d6",
            "default_route_table_id": "rtb-094dbd604e9dd300d",
            "default_security_group_id": "sg-05ef939ee3cdf1ee4",
            "dhcp_options_id": "dopt-0c88b0b2d164dbbf8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb00bbf56a7f1942",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094dbd604e9dd300d",
            "owner_id": "636955247316",
            "tags": {
              "Name": "eks_vpc"
            },
            "tags_all": {
              "Name": "eks_vpc"
            }
          }
        }
      ]
    }
  ]
}